2013-09-11 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdBuildPython): Change
	CYGBUILD_LDFLAGS from -no-undefined to -Wl,--no-undefined.

2013-03-08 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCygcheckLibraryDepSourcePython):
	Do not warn about os.rename any longer. See
	http://mail.python.org/pipermail/python-dev/2007-May/072905.html

2013-03-07 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildBootVariablesGlobalMain):
	CYGBUILD_INSTALL_IGNORE add *MANIFEST* (with all globs).

2013-03-06 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdMkpatchMain): undo and restore
	patched in srcdir.
	(CygbuildPatchDiffstat): Add message: Patches touch files.
	(CygbuildPatchApplyQuiltMaybe): Respect verbose option in quilt
	messages better.
	(CygbuildCmdMkpatchMain): Copy also quilt .pc/ directory. Otherwise
	unpatching does not work and patch reports modified files.
	(CygbuildCmdCleanBasic): Add -o options. Serious error caused
	deleting almost all source files.

2013-03-05 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckReadme): No longer
	README-N.N but only README.

	* bin/cygbuild.sh (CygbuildTreeSymlinkCopy): Change from
	grep to bash regexp match for $CYGBUILD_SHADOW_TOPLEVEL_IGNORE.
	(CygbuildCmdInstallMain): Create .inst directory.
	(CygbuildBootVariablesGlobalMain): Move .pc directory to
	cygbuild_opt_exclude_version_control.
	(CygbuildPatchApplyQuiltMaybe): pop does not support color option.
	(CygbuildDefineGlobalMain): New SCRIPT_CLEAN_CYGFILE.
	(CygbuildCmdCleanMain): Add support for external clean.sh
	(CygbuildCmdDeleteList): New.
	(CygbuildInstallPackageDocs): Remove quoted from
	$CYGBUILD_INSTALL_IGNORE to pass args in $@.
	(CygbuildBootVariablesGlobalMain): Add backslashes to
	CYGBUILD_INSTALL_IGNORE to not use newlines.
	(CygbuildDllToLibName): Add libargp

2013-02-01 Fri  Jari Aalto  <jari.aalto@cante.net>
